# AnyLeft

./: .gitignore  .prettierignore  AGENTS.md  AnyLeft Icons.dc.html  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: install.sh
src/: App.tsx  providerCaps.ts  styles.css  theme.ts  types.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: catalog.rs  commands.rs  error.rs  lib.rs  main.rs  models.rs  secrets.rs  settings.rs  state.rs  tray.rs  windows.rs
src-tauri/src/providers/: claude.rs  codex.rs  deepseek.rs  kimi.rs  minimax.rs  mod.rs
src/api/: bridge.ts  preview.ts
src/components/: AddAccountModal.tsx  Kbd.tsx  ProviderBadge.tsx  ProviderRow.tsx  Toggle.tsx
src/hooks/: useAutoResize.ts
src/screens/: Panel.tsx  Settings.tsx
