[package]
name = "anyleft"
version = "0.1.2"
description = "AnyLeft 剩了么 — track LLM subscription quota usage from the macOS menu bar."
authors = ["AnyLeft"]
edition = "2021"
rust-version = "1.80"

# The library the app binary links against. Also lets `tauri build` embed the
# generated bindings. Keep the crate name stable across platforms.
[lib]
name = "anyleft_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
keyring = { version = "3", features = ["apple-native"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = "0.4.45"
tokio = { version = "1", features = ["rt", "sync"] }

[features]
# Kept for parity with the Tauri template; production builds enable this.
custom-protocol = ["tauri/custom-protocol"]
cargo-clippy = []

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
